# stockmarket-sim

./: .editorconfig  Cargo.toml  flake.nix  rust-toolchain.toml
src/: font_rendering.rs  main.rs
